--- a/readme.adoc
+++ b/readme.adoc
@@ -2,11 +2,14 @@
 :doctype: book
 :toc: left
 :toclevels: 3
+:toc-placement!:
 :sectnumlevels: 5
 :leveloffset: 1
 :icons: font
 :copyright: Apache-2.0
 :projectName: NFT-Folder
+
+ifdef::env-github[]
 
 [[section-preface]]
 = Preface
@@ -46,3 +49,5 @@ include::3-deployment-view.adoc[Deployment View]
 
 <<<
 include::4-tutorial.adoc[Tutorial]
+
+toc::[]
