--- a/readme.adoc
+++ b/readme.adoc
@@ -33,19 +33,28 @@ The Token Smart Contract is based on the ERC-721 standard, which governs the min
 
 == Table of Contents
 
-* <<chapter-components, Components>
-* <<chapter-runtime-view, Runtime View>>
-* <<chapter-deployment-view, Deployment View>>
-* <<chapter-tutorial, Tutorial>>
+* <<components, Components>>
+* <<runtime-view, Runtime View>>
+* <<deployment-view, Deployment View>>
+* <<tutorial, Tutorial>>
 
 <<<
+
+[[components]]
+== Components
 include::1-components.adoc[]
 
-<<<
+
+[[runtime-view]]
+== Runtime View
 include::2-runtime-view.adoc[]
 
-<<<
+
+[[deployment-view]]
+== Deployment View
 include::3-deployment-view.adoc[]
 
-<<<
+
+[[tutorial]]
+== Tutorial
 include::4-tutorial.adoc[]
