--- a/readme.adoc
+++ b/readme.adoc
@@ -6,10 +6,7 @@
 :copyright: Apache-2.0
 :projectName: NFT-Folder
 
-[[section-preface]]
-= Preface
-
-== Motivation
+= Motivation
 
 An NFT, short for "Non-Fungible Token", refers to a unique digital token on the blockchain that usually represents a digital or physical asset. The blockchain enables secure and transparent tracking of ownership and the trading of the NFT.
 
@@ -17,7 +14,7 @@ The {projectName} enables the tokenization and secure management of assets as NF
 
 The Token Smart Contract is based on the ERC-721 standard, which governs the minting, ownership, and transfer of NFTs on an Ethereum-based blockchain. By extending this standard, industrial tokenization of assets is made possible, where additional essential information such as an identifier and fingerprint can be stored for each asset.
 
-== Main Authors
+= Main Authors
 
 [cols="1e,2e",options="header"]
 |===
@@ -31,7 +28,7 @@ The Token Smart Contract is based on the ERC-721 standard, which governs the min
 |michael.pichura@iml.fraunhofer.de
 |===
 
-== Table of Contents
+= Table of Contents
 
 * link:1-components.adoc[Component]
 * link:2-runtime-view.adoc[Runtime View]
